fix contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,10 @@
 :root {
   --inter: "Inter", sans-serif;
   --roboto: "Roboto", sans-serif;
-  --highlight: #b39f70;
+  --highlight: #ffcb53;
   --link: #bd8503;
   --link-visited: #daaf4b;
-  --hover: rgb(228, 198, 78);
+  --hover: white;
 }
 
 *,
@@ -102,9 +102,17 @@ main.background-img form {
   margin: auto;
   justify-content: center;
   align-items: center;
+  color: black;
 }
 main.background-img form input {
   margin-bottom: 2em;
+  font-size: 1.2em;
+  border-radius: 0.3em;
+}
+main.background-img form textarea {
+  margin-bottom: 0.5em;
+  font-size: 1.2em;
+  border-radius: 0.3em;
 }
 .button-wrapper {
   display: flex;
@@ -144,7 +152,7 @@ main.background-img form input {
 
 footer {
   background-color: var(--highlight);
-  color: white;
+  color: black;
   font-weight: bold;
   text-align: center;
   padding: 1em;
@@ -170,7 +178,7 @@ figure img {
 }
 #carousel {
   display: block;
-  width: 80%;
+  width: 50%;
   margin: auto;
 }
 .carousel-flex {
@@ -191,7 +199,7 @@ th {
 .text-wrapper {
   display: block;
   margin: auto;
-  width: 80%;
+  width: 50%;
 }
 
 aside {
@@ -242,6 +250,9 @@ li {
 }
 
 @media only screen and (max-width: 800px) {
+  .carousel-flex {
+    flex-direction: column;
+  }
   img {
     width: 100%;
     height: 100%;
